--- a/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
@@ -3,7 +3,7 @@
     <div>
       <h1 class="uk-heading-large" data-aos="fade-zoom-in">Infraviewer</h1>
       <p>Bekijk de openbare ruimte van Arnhem in 3D.</p>
-      <button class="uk-button uk-button-primary" (click)="authService.login()">Beginnen!</button>
+      <button (click)="authService.login()" class="uk-button uk-button-primary">Beginnen!</button>
     </div>
   </div>
   <div class="image-container uk-background-primary">
@@ -12,16 +12,16 @@
          uk-slideshow="animation: push; autoplay: true; autoplay-interval: 5000;">
       <ul class="uk-slideshow-items uk-height-1-1">
         <li>
-          <img src="assets/musis.jpg" alt="" uk-cover>
+          <img alt="" src="assets/musis.jpg" uk-cover>
         </li>
         <li>
-          <img src="assets/station.jpg" alt="" uk-cover>
+          <img alt="" src="assets/station.jpg" uk-cover>
         </li>
         <li>
-          <img src="assets/johnfrost.jpg" alt="" uk-cover>
+          <img alt="" src="assets/johnfrost.jpg" uk-cover>
         </li>
         <li>
-          <img src="assets/korenmarkt.jpg" alt="" uk-cover>
+          <img alt="" src="assets/korenmarkt.jpg" uk-cover>
         </li>
       </ul>
     </div>
@@ -65,7 +65,7 @@
   </div>
 </section>
 
-<ng-template #featureCard let-title="title" let-description="description" let-icon="icon">
+<ng-template #featureCard let-description="description" let-icon="icon" let-title="title">
   <div class="feature-card uk-card-hover uk-padding-small uk-card uk-card-default" data-aos="fade-up">
     <div class="uk-card-media-top">
       <fa-icon [icon]="icon"></fa-icon>
