--- a/infra-viewer/apps/website/src/app/shared/components/arcgis-map/arcgis-map.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/arcgis-map/arcgis-map.component.html
@@ -9,12 +9,12 @@
   <ul class="uk-switcher uk-margin">
     <li class="uk-padding-small uk-padding-remove-vertical">
       <p>Create a distance measurement</p>
-      <button class="uk-button uk-button-default uk-width-1-1" (click)="clearMeasurements('distance')">Clear</button>
+      <button (click)="clearMeasurements('distance')" class="uk-button uk-button-default uk-width-1-1">Clear</button>
       <div #distanceMeasurement id="distance-measurement"></div>
     </li>
     <li class="uk-padding-small uk-padding-remove-vertical">
       <p>Create a surface measurement</p>
-      <button class="uk-button uk-button-default uk-width-1-1" (click)="clearMeasurements('surface')">Clear</button>
+      <button (click)="clearMeasurements('surface')" class="uk-button uk-button-default uk-width-1-1">Clear</button>
       <div #surfaceMeasurement id="surface-measurement"></div>
     </li>
   </ul>
