When pressing F it toggles fullscreen

--- a/infra-viewer/apps/website/src/app/shared/components/arcgis-map/arcgis-map.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/arcgis-map/arcgis-map.component.html
@@ -1,4 +1,4 @@
-<div id="map"></div>
+<div (keydown)="onKeyDown($event)" id="map"></div>
 
 <div #measurementWidgetsContainer class="uk-background-white" id="measurement-widgets-container">
   <ul class="uk-padding-small uk-padding-remove-vertical" uk-tab="animation:uk-animation-fade;">
